avoid passing java.endorsed.dirs for JRE >=9
* use existense of JRE_HOME/bin/jshell as the proxy for java9 detection
as per https://git.eclipse.org/r/#/c/105865/
* adopt convention of tomcat9 to use the ENDORSED_PROP variable
everywhere
* avoid setting JAVA_ENDORSED_DIRS unconditionally